fix: remove unnused code